ast logic